# cli_multi_rapid_DEV

./: .dockerignore  .editorconfig  .env.example  .env.template  .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AGENTS.md  ARCHIVE_CLEANUP_SUMMARY.md  CLAUDE.md  CODEX_MODIFICATION_CONTRACT_EXAMPLE.yaml  CONTRIBUTING.md  DOCKER.md  Determinism contract.md  Dockerfile  ENTERPRISE_INTEGRATION_PLAN.md  EXECUTION_SUMMARY.md  INTEGRATION_SUMMARY.md  INTERFACE_GUIDE.md  Install-AIStack-Production.ps1  MERGE_CONSOLIDATION_PLAN.md  Makefile  PR_CREATION_INSTRUCTIONS.md  README-local-stack.md  README.md  README_CODEX_MODIFICATION_SYSTEM.md  REPOSITORY_STATE_ANALYSIS.md  REPO_CLEANUP_PHASE_PLAN.md  SECURITY.md  SYNCHRONIZATION_CORRECTIONS.md  Taskfile.yml  VSCODE_INTEGRATION.md  VSCODE_SETUP.md  archive_and_cleanup_branches.sh  docker-compose.yml  drawio_import_guide.md  langgraph_cli.py  (+12 more)
.ai/bundles/: auth-fix-a1b2c3d4.json
.ai/plan_modules/: 60-logging-and-errors.json
.ai/prompts/: ai_edit_template.md
.ai/schemas/: ai_architecture_analysis.schema.json  ai_code_review.schema.json  ai_improvements.schema.json  ai_refactor_plan.schema.json  ai_test_plan.schema.json  apf.io.event.v1.schema.json  apf.io.request.v1.schema.json  apf.io.response.v1.schema.json  codex_modification_contract.schema.json  combined_plan.schema.json  completion_certificate.schema.json  coordination.schema.json  dag_plan_schema.json  diagnostics.schema.json  edit-command.schema.json  edit_schema.json  enhanced_contracts.schema.json  github_issue_triage.schema.json  github_pr_review.schema.json  github_repository_analysis.schema.json  github_security_analysis.schema.json  plan.schema.json  plan_update.schema.json  rollback_contract.schema.json  test_report.schema.json  tools.schema.json  workflow.schema.json
.devcontainer/: devcontainer.json
.gemini/: GEMINI.md
.git-rewrite/: backup-refs  commit  heads  index  message  parse  revs
.githooks/: pre-push
.github/: dependabot.yml
3D Objects/: desktop.ini
CLI_PY_GUI/: Python GUI Development Report_.md
CODEX_IMPLEMENTATION/: README_CODEX_INSTRUCTIONS.md
Saved Games/: desktop.ini
artifacts/: .gitkeep  test_diagnostics.json  test_fixes.json
capabilities/: capability_bindings.yaml  cost_limits.yaml  tool_registry.yaml
components/: registry.yaml
config/: autonomous_cli_workflow.yaml  docker-compose.yml  failover_maps.yaml  free_tier_framework.json  integrations.json  jwt_private.pem  jwt_private.pem.template  jwt_public.pem  jwt_public.pem.template  mql4_command.txt  pre-commit-config.yaml  python_config.json  tool_adapters.json  tool_adapters.yaml  tools.yaml  unified_config.json  workflow-config.yaml
cost/: .gitkeep  run_1758350456.jsonl
docs/: ASSESSMENT_READINESS.md  COMPLETE_IMPLEMENTATION_PLAN.md  GDW_AUTHORING.md  GDW_TROUBLESHOOTING.md  README_AI_EDIT_PIPELINE.md  RELEASING.md  STRUCTURE.md  WORKFLOW_INTEGRATION_STRATEGY.md  ai-tools-guide.md  audit_schema.md  autonomous_update_system.md  cli_system_overview.md  cost-optimization-guide.md  cost_policies.md  event_bus_topics.md  execution_model.md  failover_strategy.md  framework-overview.md  health_policies.md  ipt_wt_pattern.md  merge_policies.md  planner_costs.md  project_board.md  routing-logic.md  security_tokens.md  setup-guide.md  tool_registry.md  verification_framework.md  verification_plugins.md  vscode_cockpit.md  workflow-guide.md
examples/: dev-to-prod.yaml  simple-ci.yaml
frontend/: index.html
gui_terminal/: DEVELOPING.md  DOCS.md  README.md  requirements-dev.txt  requirements.txt
lib/: audit_logger.py  automated_merge_strategy.py  context_analysis_engine.py  cost_tracker.py  event_bus_client.py  gdw_chain_executor.py  gdw_metrics.py  gdw_orchestrator.py  gdw_runner.py  health_scoring.py  ipt_bus_client.py  merge_strategy.py  pattern_miner.py  planner_cost_model.py  scheduler.py  verification_framework.py
local/: docker-compose.yml
logs/: .gitkeep  error_registry.json
plans/: combined_repo_plan.ALL_INCLUSIVE.json
ps/: install_codex_vscode_profile.ps1
schema/: gdw.spec.schema.json
scripts/: CreateShortcut.ps1  CreateShortcut.ps1.txt  INS_ENHANCED_FEATURES.md  INS_Unified Critical Systems Audit AI Development Toolchain & VS Code Extension.md  INS_ai-config-example.json  INS_ai_toolchain_installer_complete_enhanced.ps1  INS_drop-in PowerShell snippets.md  INS_path_a_migration_guide.md  SyncDashboardFiles.ps1  apply_updates.py  audit_cli.py  audit_simple_cli.py  build_open_source_catalog.py  bump_version.py  commit_guard.sh  compile_mql4.ps1  compliance_gate.py  compose_plan.py  create_consolidation_pr.sh  create_github_issues.py  cross_platform_setup.sh  deterministic.sh  docker-dev.bat  docker-dev.sh  enhanced_analysis.py  enrich_open_source_catalog.py  free_tier_setup.sh  generate_models.py  generate_plan.py  gh_seed_issues.py  guard_cwd.ps1  guard_cwd.sh  healthcheck.py  install_all.ps1  install_codex_vscode_profile.sh  install_hooks.ps1  install_hooks.py  install_hooks.sh  install_hooks_fixed.py  integrate_enterprise_workflow.sh  (+23 more)
state/: tool_health.json
tests/: __init__.py  conftest.py  sample_scenario.json  test_cli.py  test_coordination_cli.py  test_enterprise_modules.py  test_gdw_catalog.py  test_gdw_performance_optional.py  test_gdw_policies.py  test_git_guard_system.py  test_gui_parity_exit_optional.py  test_gui_parity_extended_optional.py  test_gui_parity_optional.py  test_gui_terminal_core.py  test_multiagent_integration.py  test_quality_run.py  test_scenarios.py  test_tools_doctor.py  test_verifier.py  test_verifier_gates.py  test_websocket_integration.py
tools/: Detect-ToolPaths.ps1  apply_edits.py  detect_tools.py  edit_validator_v2.py  quick_test.ps1  selfcheck_apply_edits.py  test_wrappers.ps1
updates/: UPDATE_TEMPLATE.json
verify.d/: pytest.py  ruff_semgrep.py  schema_validate.py
vscode-extension/: .eslintrc.json  LICENSE  jest.config.js  package.json  tsconfig.json
workflows/: __init__.py  execution_roadmap.py  orchestrator.py  plan_actions.py  roadmap_state.json
(+386 files in other folders)
