[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-orchestrator"
version = "1.0.0"
description = "CLI Orchestrator - Deterministic, schema-driven CLI orchestrator for developer tools and AI agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "CLI Orchestrator Team", email = "dev@cli-orchestrator.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Tools",
]

[project.urls]
Homepage = "https://github.com/DICKY1987/cli_multi_rapid_DEV"
Repository = "https://github.com/DICKY1987/cli_multi_rapid_DEV"

[project.scripts]
cli-orchestrator = "cli_multi_rapid.main:main"

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
]
