[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cli-orchestrator"
version = "1.1.0"
description = "CLI Orchestrator - Deterministic, schema-driven CLI orchestrator for developer tools and AI agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "CLI Orchestrator Team", email = "dev@cli-orchestrator.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Tools",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "jsonschema>=4.0.0",
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://github.com/DICKY1987/cli_multi_rapid_DEV"
Repository = "https://github.com/DICKY1987/cli_multi_rapid_DEV"

[project.scripts]
cli-orchestrator = "cli_multi_rapid.main:main"

[project.optional-dependencies]
ai = [
    "aider-chat>=0.40.0",
    "anthropic>=0.25.0",
    "openai>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "safety>=2.0.0",
    "bandit>=1.7.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-timeout>=2.1.0",
    "httpx>=0.24.0",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == '__main__':",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
precision = 2
show_missing = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311']
include = '\\.(pyi)?$'
extend-exclude = '''
/(\
  # directories\
  \\.eggs\
  | \\.git\
  | \\.hg\
  | \\.mypy_cache\
  | \\.tox\
  | \\.venv\
  | build\
  | dist\
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["cli_multi_rapid"]
skip_glob = ["*/migrations/*"]

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["B011", "F401", "F811"]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "aider.*",
    "anthropic.*",
    "openai.*",
    "yaml.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B601"]


